Update app name to lantern7 in deployment workflow

--- a/.github/workflows/main_jhg2eflantern.yml
+++ b/.github/workflows/main_jhg2eflantern.yml
@@ -71,7 +71,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'jhg2eflantern'
+          app-name: 'lantern7'
           slot-name: 'Production'
           startup-command: 'python startup.py'
           
