--- a/.github/workflows/main_lantern7.yml
+++ b/.github/workflows/main_lantern7.yml
@@ -73,4 +73,5 @@ jobs:
         with:
           app-name: 'lantern7'
           slot-name: 'Production'
+          startup-command: 'python startup.py'
           
