--- a/.github/workflows/main_lantern7.yml
+++ b/.github/workflows/main_lantern7.yml
@@ -73,5 +73,6 @@ jobs:
         with:
           app-name: 'lantern7'
           slot-name: 'Production'
-          startup-command: 'python startup.py'
+          startup-command: 'startup.cmd'
+          package: '.'
           
