--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.3.3
-azure-storage-blob==12.27.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
+Flask>=3.0.0
+python-dotenv>=1.0.1
+azure-storage-blob>=12.20.0
+Werkzeug>=3.0.0
